[gd_scene load_steps=3 format=3 uid="uid://b3xqbpy1e2f30"]

[ext_resource type="Script" path="res://utils/areaTransport/area_transport.gd" id="1_amaf4"]
[ext_resource type="AudioStream" uid="uid://bfp02mba7phqv" path="res://utils/logo/001.mp3" id="2_0bmp8"]

[node name="areaTransport" type="Area2D"]
collision_layer = 0
monitorable = false
script = ExtResource("1_amaf4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="audioError" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0bmp8")
bus = &"sfx"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
